@@ -2,8 +2,6 @@ dist: xenial
 language: python
 cache: pip
 python:
-  - 2.7
-  - 3.4
   - 3.5
   - 3.6
   - 3.7
@@ -14,16 +12,6 @@ env:
   - DJANGO=master
 matrix:
   exclude:
-    - python: 2.7
-      env: DJANGO=2.0
-    - python: 2.7
-      env: DJANGO=2.1
-    - python: 2.7
-      env: DJANGO=master
-    - python: 3.4
-      env: DJANGO=2.1
-    - python: 3.4
-      env: DJANGO=master
     - python: 3.5
       env: DJANGO=master
 install: pip install tox-travis codecov
