@@ -1,5 +1,3 @@
-# Generated by Django 2.1.4 on 2018-12-23 09:03
-
 from django.db import migrations
 
 
