@@ -1,14 +1,10 @@
 [tox]
 envlist =
-    py{27,34,35,36,37}-django111
-    py{34,35,36,37}-django20
-    py{35,36,37}-django21
+    py{35,36,37}-django{111,20,21}
     py{36,37}-djangomaster
 
 [travis]
 python =
-  2.7: py27
-  3.4: py34
   3.5: py35
   3.6: py36
   3.7: py37
